tos 2.07, fix weird alignment on cpanel startpage

--- a/Website/AtariLegend/templates/0/scss/_cpanel-main.scss
+++ b/Website/AtariLegend/templates/0/scss/_cpanel-main.scss
@@ -10,7 +10,7 @@
 Front page
 ------------------------------------------------------------ */
 #user_stats{ float: right; width:48%; margin-bottom: 30px;}	
-#welcome_cpanel{ margin-top: 390px; float: left; width:48%; margin-bottom: 30px;}	
+#welcome_cpanel{ float: left; width:48%; margin-bottom: 30px;}	
 #left_nav_position_front{ margin-top: 20px; margin-bottom: 20px; float: left;}
 #main_stats_position_front{ margin-top: 20px; margin-bottom: 20px;}
 #quick_search_position_front{ margin-top: 20px; margin-bottom: 20px; float: right;}
